--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -185,13 +185,51 @@
 	box-shadow: inset 0px 0px 20px rgba(255, 232, 198, 0.582);
 	border: 2px solid rgba(255, 232, 198, 0.5);
 }
-.skills {
-	background-color: gray;
-	scroll-snap-stop: always;
-}
 
 .carouselFix {
 	width: 200px;
 	height: 150px;
 	margin-bottom: 20px;
+}
+
+.skills {
+	background-color: gray;
+	scroll-snap-stop: always;
+	height: 570px;
+	display: flex;
+	flex: none;
+}
+
+.titleSk {
+	font-family: 'Oswald', sans-serif;
+	font-size: 2.5rem;
+	font-weight: bolder;
+	font-style: italic;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	color: #ff8714;
+	opacity: 1;
+}
+/* scrollY skills text-center */
+.imgI {
+	width: 120px;
+	height: 120px;
+	transition: all 0.2s ease-in-out !important;
+	-webkit-transition: all 0.2s ease-in-out !important;
+	-moz-transition: all 0.2s ease-in-out !important;
+	-ms-transition: all 0.2s ease-in-out !important;
+	-o-transition: all 0.2s ease-in-out !important;
+}
+
+.imgI:hover {
+	transform: scale(1.03);
+	-webkit-transform: scale(1.03);
+	-moz-transform: scale(1.03);
+	-ms-transform: scale(1.03);
+	-o-transform: scale(1.03);
+	box-shadow: 5px 10px 20px 1px rgb(34, 34, 34) !important;
+	transition: all 0.3s linear !important;
+	-webkit-transition: all 0.3s linear !important;
+	-moz-transition: all 0.3s linear !important;
+	-ms-transition: all 0.3s linear !important;
+	-o-transition: all 0.3s linear !important;
 }
