--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -208,6 +208,7 @@
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	color: #ff8714;
 	opacity: 1;
+	margin-top: 20px;
 }
 /* scrollY skills text-center */
 .imgI {
@@ -232,4 +233,76 @@
 	-moz-transition: all 0.3s linear !important;
 	-ms-transition: all 0.3s linear !important;
 	-o-transition: all 0.3s linear !important;
+}
+
+.projects {
+	background-color: rgba(13, 41, 58, 1);
+	scroll-snap-stop: always;
+	height: 570px;
+	display: flex;
+	flex: none;
+}
+
+.cardPr {
+	padding: 0px 30px 5px 30px;
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-ms-border-radius: 20px;
+	-o-border-radius: 20px;
+	backdrop-filter: blur(30px);
+	background-color: rgba(15, 108, 122, 0.3);
+	box-shadow: inset 0px 0px 20px rgba(255, 232, 198, 0.582);
+	border: 2px solid rgba(255, 232, 198, 0.5);
+	margin-top: 30px;
+	transition: all 0.2s ease-in-out !important;
+	-webkit-transition: all 0.2s ease-in-out !important;
+	-moz-transition: all 0.2s ease-in-out !important;
+	-ms-transition: all 0.2s ease-in-out !important;
+	-o-transition: all 0.2s ease-in-out !important;
+}
+
+.cardPr:hover {
+	box-shadow: 5px 10px 20px 1px rgb(34, 34, 34) !important;
+	transition: all 0.3s linear !important;
+	-webkit-transition: all 0.3s linear !important;
+	-moz-transition: all 0.3s linear !important;
+	-ms-transition: all 0.3s linear !important;
+	-o-transition: all 0.3s linear !important;
+}
+
+.titlePr {
+	font-family: 'Oswald', sans-serif;
+	font-weight: bolder;
+	font-style: italic;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	color: #d1562e;
+	opacity: 1;
+	margin-top: 20px;
+	height: 65px;
+}
+
+.imgPr {
+	width: 30px;
+	height: 30px;
+}
+
+.carouselPr {
+	width: 345px;
+	height: 170px;
+	margin-bottom: 10px;
+	border: 1px solid black;
+}
+.pPr {
+	height: 50px;
+}
+
+.links:hover {
+	box-shadow: 5px 10px 20px 1px rgb(209, 86, 46) !important;
+	transition: all 0.3s linear !important;
+	-webkit-transition: all 0.3s linear !important;
+	-moz-transition: all 0.3s linear !important;
+	-ms-transition: all 0.3s linear !important;
+	-o-transition: all 0.3s linear !important;
+	color: red;
 }
